Fix size and alignment of image placeholder

--- a/style.css
+++ b/style.css
@@ -44,12 +44,16 @@ a {
  }
 
  .first-stripe{
-    display: flex;
-    flex-direction: column;
+    /*display: flex; */
     border: 2px solid red;
     background-color: #1F2937;
     padding-bottom: 25px;
-    padding-top: 25px;   
+    padding-top: 25px;  
+ }
+
+ .left-first{
+    border: 5px solid brown;
+    flex-direction: column;
  }
 
  .title-first{
@@ -72,7 +76,23 @@ a {
  .order-first{
     display: flex;
     border: 2px solid purple;
-    margin: 0 200px;
+    margin-left: 200px;
+    margin-right: 200px;
  }
 
+ .right-first{
+    border: 2px solid black;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    background-color: gray;
+    margin: 0 20px;
+ }
 
+ .placeholder-first{
+    border: 2px solid orange; 
+    font-size: 18px;
+    color: #E5E7EB;
+
+ }
